# teo-gazebo-models

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  world.sdf
.github/workflows/: docker.yml
doc/: teo-gazebo-models-install.md
docker/: Dockerfile  Dockerfile.ros2  gazebo_models.txt  gui.ini  ros_entrypoint.sh
models/teo/: model.config  teo.sdf
models/teo/conf/: gazebo_teo_head.ini  gazebo_teo_leftArm.ini  gazebo_teo_leftLacqueyFetch_externalFinger.ini  gazebo_teo_leftLacqueyFetch_internalFinger.ini  gazebo_teo_leftLacqueyFetch_thumb.ini  gazebo_teo_leftLeg.ini  gazebo_teo_rightArm.ini  gazebo_teo_rightLacqueyFetch_externalFinger.ini  gazebo_teo_rightLacqueyFetch_internalFinger.ini  gazebo_teo_rightLacqueyFetch_thumb.ini  gazebo_teo_rightLeg.ini  gazebo_teo_trunk.ini  gazebo_xtion_rgbd.ini  teo_depthcamera_nws.xml  teo_nws.xml  (+15 more)
models/teo_lacqueyFetch/: teo_lacqueyFetch.sdf
models/teo_lacqueyFetch_fixed/: teo_lacqueyFetch_fixed.sdf
models/teo_stump/: teo_stump.sdf
models/teo_stump_fixed/: teo_stump_fixed.sdf
teo/: teo.sdf
teo/conf/: gazebo_teo_head.ini  gazebo_teo_leftArm.ini  gazebo_teo_leftLeg.ini  gazebo_teo_rightArm.ini  gazebo_teo_rightLeg.ini  gazebo_teo_robotname.ini  gazebo_teo_trunk.ini
teo/daes/: FrontalLeftWrist.dae
teo/fixed/: fixed.sdf
teo/head/: head.sdf
teo/leftArm/: leftArm.sdf
teo/leftLeg/: leftLeg.sdf
teo/rightArm/: rightArm.sdf
teo/rightLeg/: rightLeg.sdf
teo/trunk/: trunk.sdf
worlds/: teo.world  teo_fixed.world  teo_lacqueyFetch.world  teo_lacqueyFetch_fixed.world  teo_stump.world  teo_stump_fixed.world
(+32 files in other folders)
